Mon Apr 22 15:20:02 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/DLL_Test.h:
	* tests/DLL_Test.cpp: Removed the destroy method as it didn't help
	  ensuring allocating/deallocating the DLL object with consistent
	  heap.  Instead, we reverted back to use auto_ptr and relied on
	  the overloaded new/delete operators.

	* tests/DLL_Test_Impl.h:
	* tests/DLL_Test_Impl.cpp: Added the aforementioned overloaded
	  new/delete operator implementations.

Mon Apr 22 12:33:30 2002  Irfan Pyarali  <irfan@cs.wustl.edu>


	* tests/MT_Reactor_Upcall_Test: This is a test that shows how to
	  handle upcalls from the TP_Reactor and the WFMO_Reactor when the
	  event loop is being run by multiple threads.

	  The following files were updated to include the new test:

	  - tests/Makefile
	  - tests/Makefile.am
	  - tests/Makefile.bor
	  - tests/Reactor_Dispatch_Order_Test.dsp
	  - tests/Reactor_Dispatch_Order_Test.icc
	  - tests/icc.bat
	  - tests/run_test.lst
	  - tests/run_tests.bat
	  - tests/run_tests.psosim
	  - tests/run_tests_remote.lst
	  - tests/tests.dsw
	  - tests/tests.icp
	  - tests/MT_Reactor_Upcall_Test_WinCE.vcp
	  - tests/tests_WinCE.vcw

Mon Apr 22 15:27:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/tutorials/021/page01.html
          Corrected incorrect link

Mon Apr 22 11:20:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Svc_Conf_y.cpp:
          Removed some strange characters from this file

        * ace/config-doxygen.h:
          Added define of __cplusplus so that the file Svc_Conf_y.cpp and
          Svc_Conf_l.cpp are correctly parsed. We parsed the c-code and
          we got the following defines which we don't want:
          #define const
          Also there was a global variable 'int size' which cluttered other
          documentation.

Mon Apr 22 08:55:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Queue_T.h:
          Doxygen-ized some of the comments
