@@ -10,7 +10,7 @@
 //    Today.h
 //
 // = DESCRIPTION
-//    This class denotes the Today magazine which is derived from 
+//    This class denotes the Today magazine which is derived from
 //    Magazine.
 //
 // = AUTHOR
@@ -30,17 +30,23 @@
 
 class Today : public Magazine
 {
-  // = TITLE 
+  // = TITLE
   //   This is an derived class of Magazine.
-  // 
+  //
   // = DESCRIPTION
-  //   Polymoriphism is exploited and an object pointer of Magazine 
+  //   Polymoriphism is exploited and an object pointer of Magazine
   //   is bound to the Today object at runtime.
 public:
 
-  void title (void);
   // The virtual abstract class method which returns the title of the
   // magazine.
+  void title (void);
+
+  // Overload the new/delete opertors so the object will be
+  // created/deleted using the memory allocator associated with the
+  // DLL/SO.
+  void *operator new (size_t bytes);
+  void operator delete (void *ptr);
 };
 
 #endif /* TODAY_H */
